[fix] issue 724 - z-index for ui-draggable elements

--- a/extensions/themes/silverblue/styles/default.css
+++ b/extensions/themes/silverblue/styles/default.css
@@ -2013,6 +2013,8 @@ body.javascript-on tbody.closed tr.grouptitle th a.toggle:active {
     clear: both;
 }
 
+.ui-draggable { position:relative; z-index:998; }
+
 /* 6. Specials -------------------------------------------------------------- */
 
 ul.hierarchy li > a, 
